# rag_voyage_demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_reqs.txt  Dockerfile  Makefile  README.md  app.py  build_index.py  config.yaml  config_example.yaml  pyproject.toml  query.py  requirements.txt
.github/workflows/: ci.yml
apps/: api.py
apps/cli/: build_index.py  query.py
data/: sample_docs.jsonl
data/corpus/: agentic_decomposition.md  agentic_limits.md  azure_vs_aws.md  bm25_basics.md  bm25_tokenization.md  bm25_tuning.md  bm25_vs_dense.md  chunking_strategies.md  colbert_gpu.md  colbert_latency.md  colbert_overview.md  colbert_practical_tips.md  colbert_vs_biencoder.md  colbert_vs_crossencoder.md  context_window_limits.md  context_windowing.md  cost_optimization.md  data_quality.md  databricks_overview.md  dense_vector_norms.md  embedding_models_voyage.md  eval_canary_queries.md  eval_methodology.md  faiss_basics.md  faiss_hnsw.md  faiss_ivf_training.md  faiss_ivfpq.md  faiss_metrics.md  faiss_tuning.md  hybrid_benefits.md  hybrid_rrf_k.md  hybrid_search.md  index_size_considerations.md  index_update_strategies.md  infra_costs.md  kubernetes_role.md  logging_observability.md  metadata_design.md  negative_sampling.md  prompt_citations.md  (+9 more)
eval/: feedback.py  run_evaluation.py  tru.db
eval/reports/: agenticragapp_summary.yaml  baseline_summary.yaml  ragapp_summary.yaml
examples/: README.md  generate_rag_report.py  rag_report.json
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/terraform/.tmp/: install-deps.sh  install-deps.sh.b64
notebooks/: 01_quality_checks.py  02_evaluation.py
scripts/: build_bm25_index.py  ingest_folder.py  prepare_data.py  seed_corpus.py  synthesize_docs.py
src/: agentic_rag.py  chunking.py  colbert_reranker.py  cross_encoder_reranker.py  index_build.py  pipeline.py  sparse_retriever.py  voyage_client.py
tests/: conftest.py  test_api.py  test_build_index_smoke.py  test_chunking.py
